// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > files > getFiles > 200 > ok 1`] = `
{
  "files": [
    "a",
    "b",
  ],
}
`;

exports[`routes > files > getFiles > audit > expected call 1`] = `"expedita"`;

exports[`routes > files > getFiles > audit > expected call 2`] = `
[
  "a",
  "b",
]
`;
